WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294080
Unable to make the video play in full screen in Facebook.com on macOS
https://bugs.webkit.org/show_bug.cgi?id=294080
Summary
Unable to make the video play in full screen in Facebook.com on macOS
Charlie Wolfe
Reported
2025-06-05 11:41:23 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Charlie Wolfe
Comment 1
2025-06-05 11:41:47 PDT
rdar://152175833
Charlie Wolfe
Comment 2
2025-06-05 11:43:10 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46374
EWS
Comment 3
2025-06-05 18:03:45 PDT
Committed
295901@main
(8a207fb6bfa4): <
https://commits.webkit.org/295901@main
> Reviewed commits have been landed. Closing PR #46374 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug