Unable to make the video play in full screen in Facebook.com on macOS https://bugs.webkit.org/show_bug.cgi?id=294080 rdar://152175833

Reviewed by Pascoe.

This reverts both 290855@main and 290863@main, which caused this regression.

* LayoutTests/fullscreen/full-screen-enter-while-exiting-multiple-elements-expected.txt:
* Source/WebCore/dom/Document.cpp:
(WebCore::Document::removedLastRef):
* Source/WebCore/dom/DocumentFullscreen.cpp:
(WebCore::DocumentFullscreen::requestFullscreen):
(WebCore::DocumentFullscreen::willEnterFullscreen):
(WebCore::DocumentFullscreen::didEnterFullscreen):
(WebCore::DocumentFullscreen::exitFullscreen):
(WebCore::DocumentFullscreen::willExitFullscreen):
(WebCore::DocumentFullscreen::didExitFullscreen):
(WebCore::DocumentFullscreen::fullyExitFullscreen):
(WebCore::DocumentFullscreen::clear):
* Source/WebCore/dom/DocumentFullscreen.h:

Canonical link: https://commits.webkit.org/295901@main