Source/WebCore/dom/DocumentFullscreen.h
@@ -102,6 +102,8 @@ public:
     WEBCORE_EXPORT bool isAnimatingFullscreen() const;
     WEBCORE_EXPORT void setAnimatingFullscreen(bool);
 
+    void clear();
+
 protected:
     friend class Document;
 
@@ -117,6 +119,8 @@ private:
 
     Document* mainFrameDocument() { return protectedDocument()->mainFrameDocument(); }
 
+    RefPtr<Element> fullscreenOrPendingElement() const { return m_fullscreenElement ? m_fullscreenElement : m_pendingFullscreenElement; }
+
     bool didEnterFullscreen();
 
     enum class EventType : bool { Change, Error };
@@ -124,6 +128,9 @@ private:
     void queueFullscreenChangeEventForElement(Element& target) { m_pendingEvents.append({ EventType::Change, GCReachableRef(target) }); }
 
     WeakRef<Document, WeakPtrImplWithEventTargetData> m_document;
+
+    RefPtr<Element> m_fullscreenElement;
+    RefPtr<Element> m_pendingFullscreenElement;
 
     Deque<std::pair<EventType, GCReachableRef<Element>>> m_pendingEvents;
 
